# rustc_codegen_clr

./: .gitignore  AGENTS.md  BROKEN_TESTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  book.toml  dotnet.json  install.ps1  install.sh  rust-toolchain.toml  x86_64-unknown-dotnet.json
acceptance/: README.md  capabilities.toml
book/: README.md
cargo_tests/cd_auth/authz_rustlib/: Cargo.toml
cargo_tests/cd_auth/authz_rustlib/src/: lib.rs
cargo_tests/cd_bgservice/rustlib/: Cargo.toml
cargo_tests/cd_bgservice/rustlib/src/: lib.rs
cargo_tests/cd_class_ergonomics/rustlib/: Cargo.toml
cargo_tests/cd_class_ergonomics/rustlib/src/: lib.rs
cargo_tests/cd_containers/rustlib/: Cargo.toml
cargo_tests/cd_containers/rustlib/src/: lib.rs
cargo_tests/cd_containers2/rustlib/: Cargo.toml
cargo_tests/cd_containers2/rustlib/src/: lib.rs
cargo_tests/cd_dim/rustlib/: Cargo.toml
cargo_tests/cd_dim/rustlib/src/: lib.rs
cargo_tests/cd_ef_rust_entity/rustlib/: Cargo.toml
cargo_tests/cd_ef_rust_entity/rustlib/src/: lib.rs
cargo_tests/cd_event/rustlib/: Cargo.toml
cargo_tests/cd_event/rustlib/src/: lib.rs
cargo_tests/cd_export/rustlib/: Cargo.toml
cargo_tests/cd_export/rustlib/src/: lib.rs
cargo_tests/cd_generic_iface/rustlib/: Cargo.toml
cargo_tests/cd_generic_iface/rustlib/src/: lib.rs
cargo_tests/cd_iface_event/rustlib/: Cargo.toml
cargo_tests/cd_iface_event/rustlib/src/: lib.rs
cargo_tests/cd_iface_generic/rustlib/: Cargo.toml
cargo_tests/cd_iface_generic/rustlib/src/: lib.rs
cargo_tests/cd_pure/: Cargo.toml
cargo_tests/cd_pure/src/: main.rs
cargo_tests/cd_static_dyn/: Cargo.toml
cargo_tests/cd_static_dyn/src/: main.rs
cargo_tests/cd_subword_atomics/: Cargo.toml
cargo_tests/cd_subword_atomics/src/: main.rs
cargo_tests/cd_tokio/: Cargo.toml
cargo_tests/cd_tokio/src/: main.rs
cargo_tests/getrandom_dotnet/: Cargo.toml  README.md
cargo_tests/getrandom_dotnet/src/: lib.rs
cargo_tests/interop_method_sample/: Cargo.toml
cargo_tests/interop_method_sample/src/: main.rs
cargo_tests/pal_mio/: Cargo.toml
cargo_tests/pal_mio/src/: main.rs
cargo_tests/pal_tokio_net/: Cargo.toml
cargo_tests/pal_tokio_net/src/: main.rs
cargo_tests/panic_msgs/: Cargo.toml
cargo_tests/panic_msgs/src/: main.rs
cargo_tests/pinvoke_policy_diagnostics/: Cargo.toml
cargo_tests/pinvoke_policy_diagnostics/src/: lib.rs
cargo_tests/rust_export/: Cargo.toml
cargo_tests/rust_export/src/: lib.rs
cargo_tests/soak_blake3/: Cargo.toml
cargo_tests/soak_blake3/src/: main.rs
cargo_tests/soak_rand/: Cargo.toml
cargo_tests/soak_rand/src/: main.rs
cargo_tests/spinacz/: .gitignore  Cargo.toml
cargo_tests/spinacz/src/: main.rs  reflect.rs
cilly/: Cargo.toml
crates/rust-dotnet-bindgen/: Cargo.toml
crates/rust-dotnet-bindgen/src/: lib.rs
docs/: ABSOLUTE_CORRECTNESS_PLAN.md  ARCHITECTURE.md  BCL_COVERAGE.md  CARGO_DOTNET.md  CARGO_DOTNET_WORKSPACE_PLAN.md  CGU_PARALLELISM.md  COMPAT_SURVEY.md  DEBUGGING.md  DOTNET_10_PERFORMANCE.md  DOTNET_CLASS_WALLS_HANDOFF.md  ERGONOMICS_HANDOFF.md  ERGONOMICS_ROADMAP.md  ERGONOMICS_STATUS.md  GAPS.md  INTEROP_COOKBOOK.md  INTEROP_CSHARP.md  LIBC_SHIM_SCOPE.md  MACRO_OPPORTUNITIES.md  MANAGED_IDENTITY_AND_ABI.md  MEMORY_MODEL.md  MYCORRHIZA_ERGONOMICS_BACKLOG.md  NEXT_MILESTONE_NATIVE_INTEROP.md  OFFICE_UNITY_MAUI_ERGONOMICS_EXECUTION_PLAN.md  P3_TOTALITY.md  PERF_GUIDANCE.md  PE_EMISSION_PLAN.md  PRIMARY_OFFERINGS_PILOT.md  PRODUCTIZATION_PLAN.md  QUICKSTART_INTEROP.md  REARCHITECTURE.md  RELEASE_AND_ROLLBACK.md  RELEASE_BLOCKERS.md  RELEASE_EXECUTION_PLAN.md  RELEASE_NOTES_0.0.1.md  RESEARCH_CARGO_DOTNET.md  RUST_ANALYZER_SETUP.md  RUST_PARITY_ROADMAP.md  SEAM_AUDIT.md  STATE_OF_THE_PROJECT.md  STD_OS_UNIX_PLAN.md  (+5 more)
dotnet_aot/: Cargo.toml
dotnet_macros/: Cargo.toml
dotnet_macros/src/: lib.rs
dotnet_macros/tests/: negative_ui.rs
dotnet_macros/tests/ui/: dotnet_class_bad_bool.rs  dotnet_class_bad_bool.stderr  dotnet_class_bad_constructor_visibility.rs  dotnet_class_bad_constructor_visibility.stderr  dotnet_class_malformed_ref.rs  dotnet_class_malformed_ref.stderr  dotnet_class_unknown_key.rs  dotnet_class_unknown_key.stderr  dotnet_entity_unknown_field_key.rs  dotnet_entity_unknown_field_key.stderr  dotnet_enum_missing_repr.rs  dotnet_enum_missing_repr.stderr  dotnet_enum_payload_variant.rs  dotnet_enum_payload_variant.stderr  dotnet_export_async_span.rs  dotnet_export_async_span.stderr  dotnet_export_bad_error_policy.rs  dotnet_export_bad_error_policy.stderr  dotnet_export_cancellation_requires_result.rs  dotnet_export_cancellation_requires_result.stderr  dotnet_export_delegate_owned_string.rs  dotnet_export_delegate_owned_string.stderr  dotnet_export_duplicate_name.rs  dotnet_export_duplicate_name.stderr  dotnet_export_invalid_name.rs  dotnet_export_invalid_name.stderr  dotnet_export_result_managed_handle.rs  dotnet_export_result_managed_handle.stderr  dotnet_export_result_requires_policy.rs  dotnet_export_result_requires_policy.stderr  dotnet_export_unknown_key.rs  dotnet_export_unknown_key.stderr  dotnet_export_unsupported_param.rs  dotnet_export_unsupported_param.stderr  dotnet_export_unsupported_return.rs  dotnet_export_unsupported_return.stderr  dotnet_methods_async_disposable_missing.rs  dotnet_methods_async_disposable_missing.stderr  dotnet_methods_async_disposable_wrong_shape.rs  dotnet_methods_async_disposable_wrong_shape.stderr  (+10 more)
dotnet_overlays/: README.md  REGISTRY.toml
src/: builder.rs  (+19 more)
tools/cargo-dotnet/: Cargo.toml  README.md
tools/cargo-dotnet/src/: artifact.rs  attach.rs  build_lock.rs  buildstd.rs  bundle.rs  capabilities.rs  cli.rs  context.rs  docker.rs  doctor.rs  host.rs  interop_helpers.rs  main.rs  metadata_inputs.rs  mode.rs  native_bindgen.rs  nuget.rs  nuget_assets.rs  overlays.rs  pack.rs  palinject.rs  parallel_trace.rs  passthrough.rs  pipeline.rs  private_sysroot.rs  profiles.rs  provenance.rs  publish.rs  push.rs  receipt.rs  restore.rs  run.rs  rustflags.rs  scaffold.rs  setup.rs  test.rs  unity.rs  unity_attach.rs  unity_native.rs  unity_package.rs  (+1 more)
(+1299 files in other folders)
