[package]
name = "pal_mio"
version = "0.1.0"
edition = "2021"
[dependencies]
mio = { version = "1", features = ["net", "os-poll"] }
[workspace]

# PHASE G: NO per-project vendoring, NO hand-written [patch.crates-io]. mio needs
# a small dotnet source overlay (target_os="dotnet" selector/waker/net arms; see
# dotnet_overlays/README.md) that a cfg flip cannot supply, but the overlay lives
# ONCE in the CENTRAL registry at /work/dotnet_overlays/mio. The build framework
# (feasibility/dev.sh pal-build `apply_overlays`, the future `cargo dotnet`) auto-
# applies it via a generated `.cargo/config.toml` `paths = [...]` override, keyed
# by crate name+version against Cargo.lock — this manifest stays clean upstream
# (the user adds nothing). Cargo.lock pins mio 1.2.1, matching the overlay.
