[package]
name = "pal_tokio_net"
version = "0.1.0"
edition = "2024"
[dependencies]
tokio = { version = "1", features = ["rt", "macros", "net", "io-util"] }
[workspace]

# PHASE G: NO per-project vendoring, NO hand-written [patch.crates-io]. tokio's net
# pulls mio + socket2 + tokio itself, all three of which need small dotnet source
# overlays (mio = target_os arms, socket2 = a crate-internal IovLen alias, tokio =
# a cfg_net_unix gate + a memchr fallback arm; see dotnet_overlays/README.md) that
# no cfg flip can supply. The overlays live ONCE in the CENTRAL registry under
# /work/dotnet_overlays/{mio,socket2,tokio}. The build framework (feasibility/
# dev.sh pal-build `apply_overlays`, the future `cargo dotnet`) auto-applies them
# via a generated `.cargo/config.toml` `paths = [...]` override — `paths` is graph-
# wide by crate NAME, so it covers the TRANSITIVE mio (pulled by tokio) too. This
# manifest stays clean upstream (the user adds nothing). Cargo.lock pins mio 1.2.1
# / socket2 0.6.4 / tokio 1.52.3, matching the overlays.
