[package]
name = "soak_rand"
version = "0.1.0"
edition = "2024"
[dependencies]
# rand -> rand_core -> getrandom 0.2 transitively; the dotnet_overlays/getrandom-0.2
# overlay supplies the PAL CSPRNG backend, so NO getrandom wiring is needed (no
# `custom` feature, no register_custom_getrandom! macro).
rand = "0.8"
rand_chacha = "0.3"
[workspace]
