[package]
name = "spinacz"
version = "0.1.0"
edition = "2024"

[dependencies]
mycorrhiza = {path = "../../mycorrhiza"}
[workspace]

# `panic = "abort"` used to live here to shrink the build-std assembly and dodge SIMD-heavy
# DWARF-parsing code paths that stressed the IL exporter. It now triggers a DIFFERENT, newer
# backend bug instead: `alloc::string::SpecExtendStr::spec_extend_into` gets rejected by the
# typechecker as a `FieldOwnerMismatch` under `panic=abort` specifically (reproduces on a
# trivial `fn main()` hello-world too — not code-specific to spinacz). Dropped in favor of the
# default `panic=unwind` (same as `hello_world`/`std_hello_world`, which build cleanly); revisit
# if the original DWARF/unwind-machinery cost becomes a problem again.
