[package]
name = "cd_bgservice"
version = "0.1.0"
edition = "2021"

[lib]
# A .NET class library: `cargo dotnet build` emits `cd_bgservice.dll` containing a managed class
# `RustWorker` (declared by `#[dotnet_class]`) which IMPLEMENTS
# `Microsoft.Extensions.Hosting.IHostedService` directly, plus a long-running variant that spins a
# background OS thread with a blocking poll loop instead of `async`/`await`.
crate-type = ["cdylib"]

[dependencies]
mycorrhiza = { path = "../../../mycorrhiza" }
dotnet_macros = { path = "../../../dotnet_macros" }

# Under the repo workspace root -> needs a bare `[workspace]` (the cd_pure footgun).
[workspace]

[profile.release.build-override]
codegen-units = 1
