[package]
name = "cd_export"
version = "0.1.0"
edition = "2024"

[lib]
# A .NET class library: `cargo dotnet build` emits `cd_export.dll` whose `MainModule` carries the
# `#[dotnet_export]`-generated seam shims, callable from C# as plain typed methods.
crate-type = ["cdylib"]

[dependencies]
mycorrhiza = { path = "../../../mycorrhiza" }
dotnet_macros = { path = "../../../dotnet_macros" }

# Under the repo workspace root -> needs a bare `[workspace]` (the cd_pure footgun).
[workspace]

[profile.release.build-override]
codegen-units = 1
