[package]
name = "cd_iface_event"
version = "0.1.0"
edition = "2021"

[lib]
# A .NET class library: `cargo dotnet build` emits `cd_iface_event.dll` containing a genuine
# ECMA-335 interface with a .NET EVENT member, both synthesized from a Rust trait via
# `#[dotnet_interface]` + `#[dotnet_event]`. Under the default DIRECT_PE=1 path the hand-rolled
# PE writer emits the abstract accessors + Event/EventMap/MethodSemantics rows directly (no ilasm).
crate-type = ["cdylib"]

[dependencies]
mycorrhiza = { path = "../../../mycorrhiza" }
dotnet_macros = { path = "../../../dotnet_macros" }

# Under the repo workspace root -> needs a bare `[workspace]` (the cd_pure footgun).
[workspace]

[profile.release.build-override]
codegen-units = 1
